--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,7 @@ out/
 target/
 !.mvn/wrapper/maven-wrapper.jar
 .mvn/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
+
 release.properties
 
 # === OS/System Files ===
@@ -31,7 +28,7 @@ cucumber-html-report/
 rerun.txt
 
 # === Test Reports ===
-*.xml
+
 test-output/
 surefire-reports/
 failed-tests.log
@@ -47,3 +44,7 @@ maven-status/
 
 # === Playground Specific ===
 playground-anychart/
+
+# === Allure Reports ===
+allure-report/
+allure-results/
